tests/fixtures/errors/null_binding.z
# null is not a valid value to bind.
main: function is {
    x: null
}
